# preset-toolkit

./: .coverage  .dockerignore  .gitignore  Dockerfile  Dockerfile.blank  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: conflict-check-agent.md  visual-diff-agent.md
commands/: preset-check.md  preset-diff.md  preset-pull.md  preset-push.md  preset-screenshot.md  preset-setup.md  preset-status.md  preset.md
hooks/: hooks.json  session-start.sh
references/: common-pitfalls.md  dashboard-css.md  preset-api.md  preset-cli.md  sup-cli.md  superset-import-export.md  visual-testing.md  yaml-safety.md
scripts/: bootstrap.sh  browser_cookies.py  chart.py  config.py  dashboard.py  dataset.py  dedup.py  deps.py  detect-env.sh  fingerprint.py  formatter.py  http.py  jinja_check.py  logger.py  ownership.py  push_dashboard.py  screenshot.py  sql.py  sync.py  telemetry.py  visual_diff.py
skills/preset-brainstorming/: SKILL.md
skills/preset-chart/: SKILL.md
skills/preset-checkpoint/: SKILL.md
templates/: CLAUDE.md.template  config.yaml  gitignore.template  markers.txt  ownership.yaml  smoke.json
tests/: test_browser_cookies.py  test_chart.py  test_config.py  test_dashboard.py  test_dataset.py  test_dedup.py  test_deps.py  test_e2e_six_pillars.py  test_fingerprint.py  test_formatter.py  test_http.py  test_integration.py  test_jinja_check.py  test_logger.py  test_ownership.py  test_push_dashboard.py  test_screenshot.py  test_sql.py  test_sync.py  test_telemetry.py  test_visual_diff.py
(+54 files in other folders)
